import updated requirements.yaml

--- a/collections/requirements.yaml
+++ b/collections/requirements.yaml
@@ -1,25 +1,29 @@
 collections:
 
   - name: ansible.controller
-    version: 4.6.16
-    source: https://aap.apps.hub.aws.tntinfra.net/pulp_ansible/galaxy/rh-certified/
+    version: 4.7.8
+    source: https://aap.apps.hub.aws.tntinfra.net/api/galaxy/content/rh-certified/
 
   - name: ansible.platform
-    version: 2.5.20250702
-    source: https://aap.apps.hub.aws.tntinfra.net/pulp_ansible/galaxy/rh-certified/
+    version: 2.6.20251106
+    source: https://aap.apps.hub.aws.tntinfra.net/api/galaxy/content/rh-certified/
 
   - name: ansible.hub
-    version: 1.0.0
-    source: https://aap.apps.hub.aws.tntinfra.net/pulp_ansible/galaxy/rh-certified/
+    version: 1.0.3
+    source: https://aap.apps.hub.aws.tntinfra.net/api/galaxy/content/rh-certified/
 
   - name: ansible.eda
-    version: 2.8.2
-    source: https://aap.apps.hub.aws.tntinfra.net/pulp_ansible/galaxy/rh-certified/
+    version: 2.10.0
+    source: https://aap.apps.hub.aws.tntinfra.net/api/galaxy/content/rh-certified/
 
   - name: infra.aap_configuration
-    version: 3.8.2
-    source: https://aap.apps.hub.aws.tntinfra.net/pulp_ansible/galaxy/validated/
+    version: 4.2.1
+    source: https://aap.apps.hub.aws.tntinfra.net/api/galaxy/content/validated/
 
   - name: infra.aap_utilities
     version: 2.8.0
-    source: https://aap.apps.hub.aws.tntinfra.net/pulp_ansible/galaxy/validated/
+    source: https://aap.apps.hub.aws.tntinfra.net/api/galaxy/content/validated/
+
+  - name: infra.ah_configuration
+    version: 2.1.0
+    source: https://aap.apps.hub.aws.tntinfra.net/api/galaxy/content/validated/
